infra/terraform/networking/vpc.tf
resource "aws_vpc" "main" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = merge(local.tags, tomap({ "Name" = "${var.cust_name}-vpc" }))
}
